# city-road-simulation-3d

./: .gitignore  CMakeLists.txt  README.md  main.cpp
model/: material.lib  objload.cpp  objload.hpp  untitled.mtl
shader/: SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader  shader.cpp
utils/: camera.h  mesh.h  model.h
